# numpy-sugar

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  conftest.py  pyproject.toml  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  special_build.py  update_special.py
.github/workflows/: python-package.yml  release.yml  test.yml
doc/: Makefile  algebra.rst  array.rst  conf.py  environment.yml  index.rst  install.rst  make.bat  requirements.txt  special.rst
numpy_sugar/: __init__.py  _api.py  _array.py  _epsilon.py  _rankdata.py  _testit.py  api.py  array.py  epsilon.py  testit.py
numpy_sugar/include/limix_math/: special.h
numpy_sugar/include/numpy_sugar/: special.h
numpy_sugar/linalg/: __init__.py  _kron.py  cho.py  det.py  diag.py  dot.py  lstsq.py  lu.py  property.py  qs.py  solve.py  svd.py  tri.py
numpy_sugar/linalg/test/: test_linalg.py
numpy_sugar/ma/: __init__.py  dot.py
numpy_sugar/ma/test/: test_dot.py
numpy_sugar/random/: __init__.py  mv.py
numpy_sugar/special/: __init__.py  _numba.py  special.c  special.py
numpy_sugar/test/: test_array.py  test_multivariate_normal.py  test_rankdata.py  test_special.py
tests/: test_multivariate_normal.py
travis/: build_wheels.sh  deploy_wheels.sh  install_clang39.sh  script_stage.sh
