[tool.poetry]
name = "numpy-sugar"
version = "1.5.4"
description = "Missing NumPy functionalities"
authors = ["Danilo Horta <danilo.horta@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/limix/numpy-sugar"
homepage = "https://github.com/limix/numpy-sugar"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
scipy = "^1.4.1"
pytest = "^6.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.1.2"
black = "^22.12.0"
isort = "^5.11.4"
pyright = "^1.1.288"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
