[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Missing NumPy functionalities
download_url = https://github.com/limix/numpy-sugar
keywords = numpy, array
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = numpy_sugar
url = https://github.com/limix/numpy-sugar
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    dask[array]>=0.18.0
    numpy>=1.14.5
    pytest>=3.6.1
    scipy>=1.1.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject
pep8ignore = E402 E501

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88
