[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Missing NumPy functionalities
download_url = https://github.com/limix/numpy-sugar
keywords = numpy, array
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = numpy_sugar
url = https://github.com/limix/numpy-sugar
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=5.2
install_requires =
    dask[array]>=2.18.0
    numpy>=1.18.5
    pytest>=5.4.3
    scipy>=1.4.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject
pep8ignore = E402 E501 W292

[flake8]
ignore = E501 E741 E203 W292

[doc8]
max-line-length = 88

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
known_third_party=dask,numpy,numpy_sugar,pytest,scipy,setuptools,sphinx_rtd_theme

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass
ignore_messages = Error in "math" directive
